--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <nav class="site-nav">
 
       <div class="trigger">
-        <!-- {{ site.title }} instead of blog -->
+        <!-- {{ site.title }} instead of Blog -->
         <a class="page-link" href="{{ site.baseurl }}/">Blog</a>
 
         {% for page in site.pages %}
